samples/Sample.AspNetCore.SwaggerUI.NSwag/SwaggerThemes/minifiedCustom.min.css
:root{--scrollbar-thumb-color:hsl(0,0%,45%);--scrollbar-thumb-hover-color:hsl(0,0%,55%);--body-background-color:#124a0f;--swagger-main-color:white;/*Loading*/--loading-container-border-color:rgba(200,200,200,.1);--loading-container-border-top-color:rgba(255,255,255,.6);/*Errorscontainer*/--errors-wrapper-background-color:rgb(255,0,0,.1);--errors-wrapper-border-color:#f93e3e;--errors-wrapper-errors-color:#606060;/*Top-bar*/--topbar-pinned-background-color:rgba(0,0,0,.3);--topbar-pinned-shadow-color:rgba(0,0,0,.6);--topbar-pin-icon-color:white;--topbar-border-color:gray;--topbar-background-color:#161629;}